Style dialog box

--- a/src/main/resources/view/MainWindow.css
+++ b/src/main/resources/view/MainWindow.css
@@ -9,3 +9,10 @@
     -fx-border-color: #B6FFC1 !important;
     -fx-border-width: 2px !important;
 }
+
+.dialog {
+    -fx-border-color: #00ffff !important;
+    -fx-border-width: 2px !important;
+    -fx-padding: 10px !important;
+    -fx-border-radius: 10px !important;
+}
